--- a/To-Go/Base.lproj/Main.storyboard
+++ b/To-Go/Base.lproj/Main.storyboard
@@ -220,16 +220,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="79B-PD-J7m">
-                                <rect key="frame" x="16" y="286" width="343" height="333.66666666666674"/>
+                                <rect key="frame" x="16" y="329.33333333333331" width="343" height="246.99999999999994"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rEa-gk-SwE">
-                                        <rect key="frame" x="107.33333333333333" y="0.0" width="128.33333333333337" height="23.333333333333332"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tMr-HA-dwW">
-                                        <rect key="frame" x="64" y="43.333333333333314" width="215" height="30"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tMr-HA-dwW">
+                                        <rect key="frame" x="64" y="0.0" width="215" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="QVL-cY-udF"/>
                                         </constraints>
@@ -237,14 +231,8 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U5w-sg-Zzx">
-                                        <rect key="frame" x="127.33333333333334" y="93.333333333333314" width="88.666666666666657" height="23.333333333333329"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="boU-HE-SPu">
-                                        <rect key="frame" x="64" y="136.66666666666669" width="215" height="30"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="boU-HE-SPu">
+                                        <rect key="frame" x="64" y="50" width="215" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="bxV-J6-f2R"/>
                                         </constraints>
@@ -253,7 +241,7 @@
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ug-1f-W66">
-                                        <rect key="frame" x="146.66666666666666" y="186.66666666666669" width="50" height="0.0"/>
+                                        <rect key="frame" x="146.66666666666666" y="100" width="50" height="0.0"/>
                                         <constraints>
                                             <constraint firstAttribute="height" id="egX-8A-md8"/>
                                         </constraints>
@@ -262,7 +250,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vhG-DK-vMc">
-                                        <rect key="frame" x="95" y="206.66666666666669" width="153" height="36"/>
+                                        <rect key="frame" x="95" y="120" width="153" height="36"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                         <state key="normal" title="Login">
@@ -274,13 +262,13 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgotten Password?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MfM-eV-diD">
-                                        <rect key="frame" x="103.66666666666669" y="262.66666666666663" width="136" height="17"/>
+                                        <rect key="frame" x="103.66666666666669" y="176" width="136" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tHF-5C-fAO">
-                                        <rect key="frame" x="104" y="299.66666666666663" width="135" height="34"/>
+                                        <rect key="frame" x="104" y="213.00000000000006" width="135" height="34"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                                         <state key="normal" title="Create Account">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -310,7 +298,7 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="Ey0-A1-qfk">
-                                <rect key="frame" x="37" y="169" width="301" height="109"/>
+                                <rect key="frame" x="37" y="169" width="301" height="152.33333333333337"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.54396939280000001" green="0.41967898609999998" blue="0.38081705570000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -323,7 +311,7 @@
                             <constraint firstItem="zJq-Wb-0Vr" firstAttribute="trailing" secondItem="a3J-hM-gt5" secondAttribute="trailing" constant="87" id="MBS-GI-0bc"/>
                             <constraint firstItem="79B-PD-J7m" firstAttribute="leading" secondItem="zJq-Wb-0Vr" secondAttribute="leading" constant="16" id="aXt-Bj-OL6"/>
                             <constraint firstItem="VzE-Ir-c3n" firstAttribute="trailing" secondItem="zJq-Wb-0Vr" secondAttribute="trailing" id="g10-uJ-5Nz"/>
-                            <constraint firstItem="79B-PD-J7m" firstAttribute="centerY" secondItem="4Q1-sv-S3c" secondAttribute="centerY" constant="46.833333333333314" id="i55-IZ-YbE"/>
+                            <constraint firstItem="79B-PD-J7m" firstAttribute="centerY" secondItem="4Q1-sv-S3c" secondAttribute="centerY" constant="46.829999999999998" id="i55-IZ-YbE"/>
                             <constraint firstItem="VzE-Ir-c3n" firstAttribute="top" secondItem="4Q1-sv-S3c" secondAttribute="top" id="ih9-pP-EZo"/>
                             <constraint firstItem="zJq-Wb-0Vr" firstAttribute="bottom" secondItem="a3J-hM-gt5" secondAttribute="bottom" constant="2" id="qiA-3w-zeO"/>
                             <constraint firstItem="zJq-Wb-0Vr" firstAttribute="trailing" secondItem="Ey0-A1-qfk" secondAttribute="trailing" constant="37" id="rPL-8B-1HA"/>
@@ -334,10 +322,8 @@
                         <viewLayoutGuide key="safeArea" id="zJq-Wb-0Vr"/>
                     </view>
                     <connections>
-                        <outlet property="emailAddressLabel" destination="rEa-gk-SwE" id="Po6-Wq-4e8"/>
                         <outlet property="emailTextField" destination="tMr-HA-dwW" id="BIm-gb-oTU"/>
                         <outlet property="loginButton" destination="vhG-DK-vMc" id="XSs-zp-5xG"/>
-                        <outlet property="passwordLabel" destination="U5w-sg-Zzx" id="cK3-BU-MXm"/>
                         <outlet property="passwordTextField" destination="boU-HE-SPu" id="0ER-Ax-tuI"/>
                         <segue destination="49e-Tb-3d3" kind="showDetail" identifier="loginToSelectCafe" id="pMn-ri-Iqg"/>
                     </connections>
@@ -414,7 +400,7 @@
             <objects>
                 <tableViewController id="AMh-eF-trx" customClass="SelectCafeTableVC" customModule="My_Coffee" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" id="Pcl-8B-XR8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <mapView key="tableHeaderView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" scrollEnabled="NO" id="UkS-gl-WHT">
@@ -1177,7 +1163,6 @@
                     <tabBarItem key="tabBarItem" title="Order" id="zkd-8B-uKg"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kHc-L1-YFF">
-                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
